# claw-agent-protocol

./: Contributing to CAP.md  LICENSE  README.md  SKILL.md  pyproject.toml
docs/: connectors.md  schema.md  whitepaper.md
examples/: getting_started.md
references/: query_examples.md  schema.md  security.md  use_cases.md
scripts/: build_query.py  export_cap_data.py  generate_briefing.py  validate_cap_data.py
src/cap/connectors/: base.py  google_calendar.py  registry.py
src/cap/server/: cache.py  config.py  main.py
