[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-agent-protocol"
version = "2.0.0"
description = "MCP server providing canonical access to personal data across multiple sources"
authors = [{name = "Jason Fleagle", email = "jason@scalingmillions.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "ai-agents", "openclaw", "personal-data", "data-organization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

redis = [
    "redis>=5.0.0",
]

[project.scripts]
cap-server = "cap.server.main:main"

[project.urls]
Homepage = "https://github.com/scalingmillions/claw-agent-protocol"
Documentation = "https://github.com/scalingmillions/claw-agent-protocol/tree/main/docs"
Repository = "https://github.com/scalingmillions/claw-agent-protocol"
Issues = "https://github.com/scalingmillions/claw-agent-protocol/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
